Improve application configuration
Now support YAML format for internal configuration file :
`application.properties` can be in YAML format (`yml` or `yaml` ext).
It should only have a one internal configuration file (in properties
or YAML format).

External configuration file can be provided by using system properties
(`axelor.config=<path_to_file>`) or using env variables
(`AXELOR_CONFIG=<path_to_file>`). Same as the internal configuration
file, it also supports YAML format.

The internal configuration file is now optional. Final properties
are built using internal configuration file + external configuration
file + env variable + system properties. If variables are redefined,
they will take preferences over the previous values.

Configuration values can also be provided with system properties
using `axelor.config.<key>=value` format. For example
`db.default.user` becomes `axelor.config.db.default.user`.

Configuration values can also be provided with environment variables
using `AXELOR_CONFIG_<key>=value` format, where `<key>` is underscored
uppercase equivalent of the configuration key. For example
`db.default.user` becomes `AXELOR_CONFIG_DB_DEFAULT_USER`.

Signed-off-by: Pierre Belloy <p.belloy@axelor.com>